<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.gluonhq</groupId>
  <artifactId>hellofx</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>demo</name>
  <url>http://maven.apache.org</url>
  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>11.0.2</version>
    </dependency>
    <dependency>
      <groupId>com.github.open-dis</groupId>
      <artifactId>open-dis-java</artifactId>
      <version>bd0047169062ff0e06207c8ec6fc25447a3be992</version>
      <!-- <version>master-09f96967e7-1</version> -->
      <!-- <version>bb549e2a783a78b0e3bf6d6f5d77592d77a99081</version> -->
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>1.6.0</version>
        <executions>
          <execution>
            <goals>
              <goal>exec</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
	  <executable>java</executable>
	  <arguments>
            <argument>-classpath</argument>
	    <classpath/>
	    <argument>--module-path</argument>
	    <modulepath/>
	    <argument>--add-modules</argument>
	    <argument>javafx.controls</argument>
	    <argument>HelloFX</argument>
	  </arguments>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
